@@ -19,7 +19,12 @@ CHANGES
       be assigned to a pending parent instance, otherwise modified
       events would not be fired correctly.  Set collection is now
       compatible with merge(), fixes [ticket:1352].
-
+    
+    - Allowed pickling of PropertyOption objects constructed with
+      instrumented descriptors; previously, pickle errors would occur 
+      when pickling an object which was loaded with a descriptor-based 
+      option, such as query.options(eagerload(MyClass.foo)).
+      
     - Lazy loader will not use get() if the "lazy load" SQL clause
       matches the clause used by get(), but contains some parameters
       hardcoded.  Previously the lazy strategy would fail with the
